feat: implement profile page with user details and language preference options

--- a/translation/ar.json
+++ b/translation/ar.json
@@ -17,5 +17,13 @@
         "my_account": "حسابي",
         "profile": "الملف الشخصي",
         "logout": "تسجيل الخروج"
+    },
+    "profile": {
+        "title": "الملف الشخصي",
+        "language_label": "اللغة المفضلة",
+        "language": "العربية",
+        "change": "تغيير",
+        "email_label": "البريد الإلكتروني",
+        "edit": "تعديل"
     }
 }
